// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be structurally sound when active 1`] = `
<vime-pip-control class="hidden">
  <vime-control hidden="" keys="p" label="Picture-in-Picture" pressed="">
    <vime-icon href="#vime-exit-pip"></vime-icon>
    <vime-tooltip>
      Expand (p)
    </vime-tooltip>
  </vime-control>
</vime-pip-control>
`;

exports[`should be structurally sound when not active 1`] = `
<vime-pip-control class="hidden">
  <vime-control hidden="" keys="p" label="Picture-in-Picture">
    <vime-icon href="#vime-enter-pip"></vime-icon>
    <vime-tooltip>
      Miniplayer (p)
    </vime-tooltip>
  </vime-control>
</vime-pip-control>
`;
